--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -5,3 +5,5 @@
     {{form.as_p}}
     <input type = "submit" value = "Login"></input>
 </form>
+
+<p>Don't have an account ? <a href="{% url 'register' %}">Register</a></p>
