final styling completed

--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -1,7 +1,17 @@
-<a href="{% url 'tasks' %}">Go Back</a>
+{% extends "base/main.html" %}
 
-<form method="POST">
-    {% csrf_token %}
-    <p>Are you sure to delete this task ? : {{task}}</p>
-    <input type="submit" value="Delete">
-</form>
+{% block content %}
+
+<div class="header-bar">
+    <a href="{% url 'tasks'%}">&#8592; Back</a>
+</div>
+
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are you sure to delete this task ? : "{{task}}"</p>
+        <input class="button" type="submit" value="Delete">
+    </form>
+</div>
+
+{% endblock content %}
