--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -1,9 +1,17 @@
-<h1>Register</h1>
+{% extends "base/main.html" %}
 
+{% block content %}
+
+<div class="header-bar">
+<h1>Register</h1>
+</div>
+
+<div class="card-body">
 <form method = "POST">
     {% csrf_token %}
     {{form.as_p}}
-    <input type = "submit" value = "Register"></input>
+    <input class="button" type = "submit" value = "Register"></input>
 </form>
-
 <p>Already have an account ? <a href="{% url 'login' %}">Login</a></p>
+</div>
+{% endblock content %}
