--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -1,8 +1,17 @@
-<h1>Task Form</h1>
-<a href="{% url 'tasks'%}">Go Back</a>
-<form method="POST" action="">
-    {% csrf_token %} 
-    {{form.as_p}}
-    <input type="submit" value="Submit">
+{% extends "base/main.html" %}
 
-</form>
+{% block content %}
+
+<div class="header-bar">
+    <a href="{% url 'tasks'%}">&#8592; Back</a>
+</div>
+
+<div class="card-body">
+    <form method="POST" action="">
+        {% csrf_token %} 
+        {{form.as_p}}
+        <input class="button" type="submit" value="Submit">
+    </form>
+</div>
+
+{% endblock content %}
